tests/errors/cxx/h1.hpp
#pragma once

struct duplicate_definition_type {};

#include <h2.hpp>
